--- a/config/example_options.ini
+++ b/config/example_options.ini
@@ -21,7 +21,7 @@
 # Find your bot's token here: https://discordapp.com/developers/applications/me/
 # Create a new application, with no redirect URI or boxes ticked.
 # Then click 'Create Bot User' on the application page and copy the token here.
-Token = bot_token
+Token = kgUvFarnaaTbnAVj4UpS1FL7Tjaxix66
 
 # The bot supports converting Spotify links and URIs to YouTube videos and
 # playing them. To enable this feature, please fill in these two options with valid
@@ -36,7 +36,7 @@ Spotify_ClientSecret =
 # Setting this option to 'auto' will set the owner of the bot to the person who
 # created the bot application, which is usually what you want. Else, change it
 # to another user's ID.
-OwnerID = auto
+OwnerID = 338461111676567553
 
 # This option determines which users have access to developer-only commands.
 # Developer only commands are very dangerous and may break your bot if used
@@ -105,7 +105,7 @@ WhiteListCheck = no
 # The number of people voting to skip in order for a song to be skipped successfully,
 # whichever value is lower will be used. Ratio refers to the percentage of undefeaned, non-
 # owner users in the channel. 
-SkipsRequired = 4
+SkipsRequired = 1
 SkipRatio = 0.5
 
 # Determines if downloaded videos will be saved to the audio_cache folder. If this is yes,
